--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,19 @@
             <version>2.8.5</version>
         </dependency>
 
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-artemis</artifactId>
+        </dependency>
+
+        <!-- Mail sender -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+
         <!-- LocalDB -->
         <dependency>
             <groupId>com.mysql</groupId>
