--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,12 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.ddl-auto=update
 
-spring.security.oauth2.client.registration.google.client-id=621649646934-sgm2gu73ldgjb4beiejbjjo3tu7c61e1.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=profile,email
-
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=neojoram12@gmail.com
+spring.mail.password=njni csxf szod tolr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
