--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=OnlineMarketplaceAPI
 
-spring.datasource.url=jdbc:mysql://localhost:3306/oma_db
-spring.datasource.username=root
-spring.datasource.password=neojoram
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=jdbc:postgresql://dpg-cvs3nmmuk2gs739lfj00-a/oma_db
-#spring.datasource.username=oma_db_user
-#spring.datasource.password=OKWRlKPZj34cVD8oNY0MYwB70F79iFTP
-#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/oma_db
+#spring.datasource.username=root
+#spring.datasource.password=neojoram
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://dpg-d075athr0fns7387v630-a/oma_db
+spring.datasource.username=oma_db_user
+spring.datasource.password=nBayXnUAaGTQOLB0EjVpZp42QFx6gmbt
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
