--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=OnlineMarketplaceAPI
 
+API_URL=https://marketplaceapi-hln1.onrender.com
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/oma_db
 #spring.datasource.username=root
 #spring.datasource.password=neojoram
