--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,6 @@ spring.application.name=OnlineMarketplaceAPI
 
 API_URL=https://marketplaceapi-hln1.onrender.com
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/oma_db
-#spring.datasource.username=root
-#spring.datasource.password=neojoram
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-
 spring.datasource.url=jdbc:postgresql://dpg-d075athr0fns7387v630-a/oma_db
 spring.datasource.username=oma_db_user
 spring.datasource.password=nBayXnUAaGTQOLB0EjVpZp42QFx6gmbt
@@ -23,3 +17,12 @@ spring.mail.username=neojoram12@gmail.com
 spring.mail.password=njni csxf szod tolr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#For local dev_mode
+#API_URL=http://localhost:8080
+#spring.datasource.url=jdbc:mysql://localhost:3306/oma_db
+#spring.datasource.username=root
+#spring.datasource.password=neojoram
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
