--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-#For local dev_mode
+#For local dev_mode :)
 #API_URL=http://localhost:8080
 #spring.datasource.url=jdbc:mysql://localhost:3306/oma_db
 #spring.datasource.username=root
